SSDM-12286 Added export support for parents and children of samples.